[project]
name = "bokehmol"
description = "Tools for plotting molecules in Bokeh"
authors = [
  { name = "Cédric Bouysset", email = "cedric@bouysset.net" },
]
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
]
keywords = [
    "science",
    "chemistry",
    "drug-design",
    "cheminformatics",
    "chemoinformatics",
]
dependencies = [
    "bokeh>=3.6.0,<4",
]

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/cbouy/bokehmol"
Documentation = "https://nbviewer.org/github/cbouy/bokehmol/blob/master/notebooks/quickstart.ipynb"
Discussions = "https://github.com/cbouy/bokehmol/discussions"
Issues = "https://github.com/cbouy/bokehmol/issues"
Changelog = "https://github.com/cbouy/bokehmol/blob/master/CHANGELOG.md"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.coverage.report]
include_namespace_packages = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "if .*TYPE_CHECKING:",
    "@.*abstractmethod",
]

[build-system]
requires = ["hatchling", "bokeh ==3.6.*"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "bokehmol/_version.py"

[tool.hatch.build.targets.wheel]
include = ["bokehmol"]
exclude = ["bokehmol/node_modules"]

[tool.hatch.build.targets.wheel.force-include]
"bokehmol/dist" = "bokehmol/dist"

[tool.hatch.build.targets.sdist]
include = ["bokehmol"]
exclude = ["bokehmol/node_modules"]

[tool.hatch.build.targets.sdist.force-include]
"bokehmol/dist" = "bokehmol/dist"

[tool.hatch.build.hooks.custom]
path = 'hatch_build.py'